# gst-plugins-bad

./: .gitmodules  README  configure.ac
ext/: Makefile.am
ext/eglgles/: gstegladaptation.c  gstegladaptation.h  gstegladaptation_egl.c  gsteglglessink.c  gsteglglessink.h  video_platform_wrapper.h
ext/openh264/: Makefile.am  gstopenh264dec.cpp  gstopenh264dec.h  gstopenh264enc.cpp  gstopenh264enc.h  gstopenh264plugin.c
ext/vp8/: gstvp8utils.h
ext/vp9/: Makefile.am  gstvp9dec.c  gstvp9dec.h  gstvp9utils.h  plugin.c
ext/vpx/: Makefile.am  gstvp8dec.c  gstvp8enc.c  gstvp9dec.c  gstvp9utils.c  gstvpxutils.c  plugin.c
fluendo/: gst-fluendo.h
gst-libs/gst/androidjni/: Makefile.am  gstjniamcdirectbuffer.c  gstjniamcdirectbuffer.h  gstjniamcutils.c  gstjniamcutils.h  gstjniaudiotrack.c  gstjniaudiotrack.h  gstjnibufferinfo.c  gstjnibufferinfo.h  gstjnibytebuffer.c  gstjnibytebuffer.h  gstjnimediacodec.c  gstjnimediacodec.h  gstjnimediacodecinfo.c  gstjnimediacodecinfo.h  gstjnimediacodeclist.c  gstjnimediacodeclist.h  gstjnimediaformat.c  gstjnimediaformat.h  gstjnisurface.c  gstjnisurface.h  gstjnisurfacetexture.c  gstjnisurfacetexture.h  gstjniutils.c  gstjniutils.h
gst-libs/gst/codecparsers/: Makefile.am  gsth264parser.c
gst/dvdspu/: Makefile.am  gstdvdspu.c
gst/hls/: Makefile.am  gsthlsdemux.c  gsturidownloader.c  m3u8.c
gst/videoparsers/: Makefile.am  gsth264parse.c  gsth264parse.h  gsth265parse.c  gsth265parse.h  gstmpeg4videoparse.c  plugin.c
m4/: gst-fluendo-static.m4
sys/: Makefile.am
sys/androidmedia/: Makefile.am  gstamc-constants.h  gstamc.c  gstamc.h  gstamcaudiodec.c  gstamcaudiodec.h  gstamcdrm.c  gstamcdrm.h  gstamcmacro.h  gstamcvideodec.c  gstamcvideodec.h  gstamcvideosink.c  gstamcvideosink.h  gstaudiotracksink.c  gstaudiotracksink.h
sys/androidmedia/video/: gstvideodecoder.c  gstvideodecoder.h
sys/applemedia/: Makefile.am  avfvideosrc.h  avfvideosrc.m  osxscreencapsrc.h  osxscreencapsrc.m  plugin.m
sys/d3dvideosink/: d3dvideosink.c  d3dvideosink.h
sys/d3dvideosink/directx/directx9/: dx9_d3d.c  dx9_d3d.h
sys/decklink/: Makefile.am  gstdecklink.cpp  gstdecklink.h  gstdecklinkaudiosrc.cpp  gstdecklinkvideosrc.cpp
sys/directdraw/: gstdirectdrawplugin.c
sys/dshowsrcwrapper/: Makefile.am  config.h.in  gstdshow.cpp  gstdshow.h  gstdshowvideosrc.cpp  meson.build
sys/dshowsrcwrapper/baseclasses/: Makefile.am  amfilter.cpp  amfilter.h  amvideo.cpp  checkbmi.h  combase.cpp  combase.h  cprop.cpp  ctlutil.h  dllentry.cpp  mingwsal.h  msgthrd.h  mtype.cpp  refclock.cpp  refclock.h  streams.h  sysclock.cpp  winctrl.cpp  winutil.cpp  wxdebug.cpp  wxlist.h  wxutil.h
sys/dshowvideosink/: dshowvideofakesrc.h
sys/opensles/: openslessink.c  openslessrc.c
sys/winks/: gstksvideodevice.c  gstksvideodevice.h  gstksvideosrc.c  ksvideohelpers.c  ksvideohelpers.h
sys/winscreencap/: Makefile.am  gstdx9screencapsrc.c  gstgdiscreencapsrc.c
tests/check/: Makefile.am
tests/check/elements/: h264parse.c
win32/common/: config.h
win32/vs9/: Win32Build.rules  gst-plugins-bad.sln  libgstd3dvideosink.vcproj  libgstdirectdraw.vcproj  libgstdirectshowvideosink.vcproj  libgstdvdspu.vcproj
